--- a/requirements.txt
+++ b/requirements.txt
@@ -1,170 +1,10 @@
-aiofiles==23.2.1
-aiohappyeyeballs==2.4.6
-aiohttp==3.11.13
-aiosignal==1.3.2
-annotated-types==0.7.0
-anyio==4.8.0
-appnope @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/appnope_1699303798458/work
-asgiref==3.8.1
-asttokens @ file:///opt/conda/conda-bld/asttokens_1646925590279/work
-attrs==25.1.0
-branca==0.8.1
-certifi==2025.1.31
-charset-normalizer==3.4.1
-click==8.1.8
-clip-client==0.8.3
-comm @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_3doui0bmzb/croot/comm_1709322861485/work
-contourpy==1.3.1
-cycler==0.12.1
-dataclasses-json==0.6.7
-debugpy @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/debugpy_1699253073094/work
-decorator @ file:///opt/conda/conda-bld/decorator_1643638310831/work
-Deprecated==1.2.18
-distro==1.9.0
-docarray==0.21.1
-docker==7.1.0
-ecdsa==0.19.0
-executing @ file:///opt/conda/conda-bld/executing_1646925071911/work
-fastapi==0.115.11
-ffmpy==0.5.0
-filelock==3.17.0
-folium==0.19.4
-fonttools==4.56.0
-frozenlist==1.5.0
-fsspec==2025.2.0
-geopandas==1.0.1
-googleapis-common-protos==1.68.0
-gradio==5.20.0
-gradio_client==1.7.2
-groovy==0.1.2
-grpcio==1.68.0
-grpcio-health-checking==1.68.0
-grpcio-reflection==1.68.0
-h11==0.14.0
-httpcore==1.0.7
-httpx==0.28.1
-httpx-sse==0.4.0
-huggingface-hub==0.29.1
-idna==3.10
-importlib_metadata==8.5.0
-ipykernel @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_f428_5tjvx/croot/ipykernel_1705933835534/work
-ipython @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_f02dzd_ff3/croot/ipython_1718287987043/work
-jcloud==0.3
-jedi @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_194648shy3/croot/jedi_1721058355221/work
-jina==3.33.1
-jina-hubble-sdk==0.39.0
-Jinja2==3.1.5
-jiter==0.8.2
-jsonpatch==1.33
-jsonpointer==3.0.0
-jupyter_client @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/jupyter_client_1701803191601/work
-jupyter_core @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_73nomeum4p/croot/jupyter_core_1718818302815/work
-kiwisolver==1.4.8
-langchain==0.3.19
-langchain-community==0.3.18
-langchain-core==0.3.40
-langchain-text-splitters==0.3.6
-langsmith==0.3.11
-lz4==4.4.3
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-marshmallow==3.26.1
-matplotlib==3.10.0
-matplotlib-inline @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/matplotlib-inline_1699242375920/work
-mdurl==0.1.2
-multidict==6.1.0
-mypy-extensions==1.0.0
-nest-asyncio @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_310vb5e2a0/croot/nest-asyncio_1708532678212/work
-numpy==2.2.2
-openai==1.65.2
-opentelemetry-api==1.30.0
-opentelemetry-exporter-otlp==1.30.0
-opentelemetry-exporter-otlp-proto-common==1.30.0
-opentelemetry-exporter-otlp-proto-grpc==1.30.0
-opentelemetry-exporter-otlp-proto-http==1.30.0
-opentelemetry-exporter-prometheus==0.51b0
-opentelemetry-instrumentation==0.51b0
-opentelemetry-instrumentation-aiohttp-client==0.51b0
-opentelemetry-instrumentation-asgi==0.51b0
-opentelemetry-instrumentation-fastapi==0.51b0
-opentelemetry-instrumentation-grpc==0.51b0
-opentelemetry-proto==1.30.0
-opentelemetry-sdk==1.30.0
-opentelemetry-semantic-conventions==0.51b0
-opentelemetry-util-http==0.51b0
-orjson==3.10.15
-outcome==1.3.0.post0
-packaging @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_81ri4yfpjw/croot/packaging_1720101866878/work
-pandas==2.2.3
-parso @ file:///opt/conda/conda-bld/parso_1641458642106/work
-pathspec==0.12.1
-pexpect @ file:///tmp/build/80754af9/pexpect_1605563209008/work
-pillow==11.1.0
-platformdirs @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/platformdirs_1701803010714/work
-prometheus_client==0.21.1
-prompt-toolkit @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_c63v4kqjzr/croot/prompt-toolkit_1704404354115/work
-propcache==0.3.0
-protobuf==5.29.3
-psutil @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/psutil_1699248249804/work
-ptyprocess @ file:///tmp/build/80754af9/ptyprocess_1609355006118/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
-pure-eval @ file:///opt/conda/conda-bld/pure_eval_1646925070566/work
-pyasn1==0.4.8
-pydantic==2.10.6
-pydantic-settings==2.8.1
-pydantic_core==2.27.2
-pydub==0.25.1
-Pygments @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/pygments_1699238063295/work
-pyogrio==0.10.0
-pyparsing==3.2.1
-pyproj==3.7.0
-PySocks==1.7.1
-python-dateutil @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_66ud1l42_h/croot/python-dateutil_1716495741162/work
-python-dotenv==1.0.1
-python-jose==3.4.0
-python-multipart==0.0.20
-pytz==2025.1
-PyYAML==6.0.2
-pyzmq @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_43pxpbos3z/croot/pyzmq_1705605108344/work
-requests==2.32.3
-requests-toolbelt==1.0.0
-rich==13.9.4
-rsa==4.9
-ruff==0.9.9
-safehttpx==0.1.6
-selenium==4.29.0
-semantic-version==2.10.0
-setuptools==72.1.0
-shapely==2.0.7
-shellingham==1.5.4
-six @ file:///tmp/build/80754af9/six_1644875935023/work
-sniffio==1.3.1
-sortedcontainers==2.4.0
-SQLAlchemy==2.0.38
-stack-data @ file:///opt/conda/conda-bld/stack_data_1646927590127/work
-starlette==0.46.0
-tenacity==9.0.0
-tomlkit==0.13.2
-tornado @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_a4w03z48br/croot/tornado_1718740114858/work
-tqdm==4.67.1
-traitlets @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_500m2_1wyk/croot/traitlets_1718227071952/work
-trio==0.29.0
-trio-websocket==0.12.1
-typer==0.15.2
-types-requests==2.31.0.6
-types-urllib3==1.26.25.14
-typing-inspect==0.9.0
-typing_extensions==4.12.2
-tzdata==2025.1
-urllib3==1.26.20
-uvicorn==0.23.1
-uvloop==0.21.0
-wcwidth @ file:///Users/ktietz/demo/mc3/conda-bld/wcwidth_1629357192024/work
-websocket-client==1.8.0
-websockets==15.0
-wheel==0.43.0
-wrapt==1.17.2
-wsproto==1.2.0
-xyzservices==2025.1.0
-yarl==1.18.3
-zipp==3.21.0
-zstandard==0.23.0
+flask
+qrcode
+werkzeug
+pillow
+python-dotenv
+fastapi
+langchain
+langchain-community
+uvicorn
+openai
